--- a/index.html
+++ b/index.html
@@ -20,41 +20,46 @@
         <div class="block1"></div>
         </nav>
         <nav class="nav">
-            <div class="block3">1</div><!--
-            --><div class="block3">2</div><!--
-            --><div class="block3">3</div><!--
-            --><div class="block3">4</div>
+            <div class="block3">1</div>
+            <div class="block3">2</div>
+            <div class="block3">3</div>
+            <div class="block3">4</div>
+            <div class="clearfix"></div>
         </nav>
         <div class="clearfix">
         </div>
     </div>
     <div class="container">
         <nav class="navleft">
-            <div class="block1">1</div><!--
-        --><div class="block1">2</div>
+            <div class="block1">1</div>
+        <div class="block1">2</div>
+            <div class="clearfix"></div>
         </nav>
         <nav class="nav">
-            <div class="block3">1</div><!--
-        --><div class="block3">2</div>
+            <div class="block3">1</div>
+            <div class="block3">2</div>
+            <div class="clearfix"></div>    
         </nav>
         <div class="clearfix"></div>
     </div>
     <div class="container">
         <nav class="nav2">
-            <div class="bigblock"></div><!--
-            --><div class="box">
-                <div class="smallblock">1</div>
+            <div class="bigblock"></div>
+            <div class="box">
+                <div class="smallblock">1</div>               
                 <div class="smallblock1">2</div>
             </div>
+                <div class="clearfix"></div>    
         </nav>
         <div class="clearfix"></div>
     </div>
     <div class="container">
         <nav class="nav2-1">
-            <div class="bigblock"></div><!--
-            --><div class="box">
+            <div class="bigblock"></div>
+            <div class="box">
                 <div class="smallblock">1</div>
                 <div class="smallblock1">2</div>
+                <div class="clearfix"></div>
             </div>
         </nav>
         <div class="clearfix"></div>
