--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <nav class="navleft">
-        <div class="block1"></div>
+        <div class="block1-1"></div>
         </nav>
         <nav class="nav">
         <div class="block2"></div>
